paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_c4/sample_003/target.compile.log
error[E0614]: type `i32` cannot be dereferenced
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_c4/sample_003/target.rs:10:12
   |
10 |         if *g == 1 { 1 } else { 0 }
   |            ^^ can't be dereferenced

error[E0614]: type `i32` cannot be dereferenced
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_c4/sample_003/target.rs:18:8
   |
18 |     if *g != 1 {
   |        ^^ can't be dereferenced

error[E0614]: type `i32` cannot be dereferenced
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_c4/sample_003/target.rs:27:12
   |
27 |         if *g == 1 { 1 } else { 0 }
   |            ^^ can't be dereferenced

error[E0614]: type `i32` cannot be dereferenced
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/cond_op_c4/sample_003/target.rs:32:8
   |
32 |     if *g != 1 {
   |        ^^ can't be dereferenced

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0614`.